Fixed white space(991 - 20%) fixed input name player max-length

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -598,10 +598,10 @@ main
 @media screen and ( max-width: 1200px )
     html
         font-size: 44%
-
+///26% 991
 @media screen and ( max-width: 991px )
     html
-        font-size: 26%
+        font-size: 20%
 
 // @media screen and ( max-width: 912px )
 //     html
